# octo

./: .clang-format  .gitignore  CMakeLists.txt  meson.build
.cache/clangd/index/: LRUcache.cpp.B79305A020857D21.idx  LRUcache.hpp.3E77654880784E9A.idx  bloom_filter.cpp.0782E8CE3A10217A.idx  bloom_filter.hpp.E39E99327A74BE1B.idx  document.hpp.94069DBB06FCB8AA.idx  inverted_index.cpp.57E2BE9C8D3A281F.idx  inverted_index.hpp.DF457A371BB37506.idx  test_LRUcache.cpp.A56F8A0DE4671BB4.idx  test_inverted_index.cpp.EFD81B8BD4791651.idx  test_inverted_index_new.cpp.0D17B754DBEBD9A1.idx
src/: CMakeLists.txt  meson.build
src/app/: meson.build
src/app/octo/: main.cpp  meson.build
src/core/: CMakeLists.txt  LRUcache.cpp  LRUcache.hpp  STOPWORDS.txt  bloom_filter.cpp  bloom_filter.hpp  directory_reader.cpp  directory_reader.hpp  document.hpp  indexing.cpp  indexing.hpp  inverted_index.cpp  inverted_index.hpp  lru_cache.cpp  lru_cache.hpp  meson.build  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  meson.build
tests/contents/: test_article.txt
tests/core/: meson.build
tests/test_core/: CMakeLists.txt  test_LRUcache.cpp  test_directory_reader.cpp  test_indexing.cpp  test_inverted_index.cpp  test_inverted_index_new.cpp  test_lru_cache.cpp  test_tokenizer.cpp
